文件发布 查看 业务逻辑实现  文件下载  下一步  做个人中心我的发布

--- a/WebContent/resource/css/projectList.css
+++ b/WebContent/resource/css/projectList.css
@@ -22,7 +22,7 @@ color: #333333;
 }
 /* 列表项左边文字 */
 .proItemLeft{
-	margin: 30px;
+	margin: 20px;
 /* 	background-color: #ff8080; */
 	width: 600px;
 	height: 130px;
@@ -38,7 +38,12 @@ color: #333333;
 	padding: 40px 0px;
 }
 
-
+.proDesc{
+	width: 600px;
+	height: 40px;
+	/* background-color: #ff8040; */
+	overflow: hidden;
+}
 
 
 
